@@ -133,6 +133,14 @@ bool rolBar::eventGot(int type, guiObject* object)
 }
 
 /*********************************************************************
+ *                               draw                                *
+ *********************************************************************/
+void rolBar::draw(int i)
+{
+   scrollText->draw(i);
+}
+
+/*********************************************************************
  *                                draw                               *
  *********************************************************************/
 void rolBar::draw(SDL_Surface* screen)
