@@ -76,6 +76,10 @@ class textBox: public guiObject
        * \return -> number of the last writed line */
       int draw();
 
+      /*! Draw only the line number 'i'
+       * \param i -> number of the line to draw */
+      void draw(int i);
+
       /*! Draw the textbar (from guiObject)
        * \param screen -> ignored. */
       void draw(SDL_Surface* screen);
